1999-12-06  Per Bothner  <per@bothner.com>

	* vectors.scm (vector-length):  Use new `::' type-specification syntax.
	* system.scm (tokenize-string-using-shell):  Add type specification.

1999-11-15  Per Bothner  <per@bothner.com>

	* ports.scm (open-output-string, get-output-string):  New procedures.
	* characters.scm, vectors.scm:  Use invoke and invoke-static.
	* strings.scm (make-string):  Use (make <string> ...).

1999-10-25  Per Bothner  <per@bothner.com>

	* kawa/lib/ports.scm (open-input-string):  New procedure. 
	* kawa/lib/thread.scm (future):  Fix typo:  delay -> future.

1999-09-10  Per Bothner  <per@bothner.com>

	* files.scm (*temp-file-number*):  Revert to non-private, until we
	work out handling of private non-static variables.
	* emacs.scm:  Update gnu.elisp.* to gnu.jemacs.lang.*.

1999-09-08  Per Bothner  <per@bothner.com>

	* ports.scm (transcript-on):  Use <String> as parameter type,
	rather than <java.lang.String>, so we get the desired conversion.
	* vectors.scm:  Extra whitespace for more discrimating line numbers.

1999-09-05  Per Bothner  <per@bothner.com>

	* files.scm (*temp-file-number*):  Make private.

1999-08-22  Per Bothner  <per@bothner.com>

	* emacs.scm (boundp):  New function.
	* numbers.scm (sin, cos, tan):  Re-write to use invoke-static.
	* syntax.scm (defmacro):  Re-write to use Defmacro.

1999-08-06  Per Bothner  <per@bothner.com>

	* characters.scm, numbers.scm, strings.scm, vectors.scm:  Add many
 	specifications of parameter types for better error messages.

1999-07-20  Per Bothner  <per@bothner.com>

	* Makefile.am, Makefile.in (list-sources):  New rule.

1999-07-19  Per Bothner  <per@bothner.com>

	* trace.scm:  New file.
	* files.scm (system-tmpdir, make-temporary-file):  New procedures.
	* Makefile.am, Makefile.in (java_SCM):  Add trace.scm.

1999-04-22  Per Bothner  <bothner@Magnus.Cygnus.COM>

	* reflection.scm (subtype?):  New procedure.
	* std_syntax.scm (%let-lambda1, %et-init):  Handle :: TYPE specifier.